--- a/WatchOut/Scene/Home/View/Shows/ShowTableViewCell.xib
+++ b/WatchOut/Scene/Home/View/Shows/ShowTableViewCell.xib
@@ -11,44 +11,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="showCell" rowHeight="100" id="KGk-i7-Jjw" customClass="ShowTableViewCell" customModule="WatchOut" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="showCell" rowHeight="130" id="KGk-i7-Jjw" customClass="ShowTableViewCell" customModule="WatchOut" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vrh-xn-Xga">
-                        <rect key="frame" x="2" y="8" width="316" height="84"/>
+                        <rect key="frame" x="2" y="4" width="316" height="122"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mca-Wq-yPi">
-                                <rect key="frame" x="8" y="4" width="80" height="76"/>
+                                <rect key="frame" x="8" y="4" width="100" height="114"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="88h-dQ-46P"/>
+                                    <constraint firstAttribute="width" constant="100" id="88h-dQ-46P"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cso-gZ-E78">
-                                <rect key="frame" x="104" y="8" width="210" height="68"/>
+                                <rect key="frame" x="124" y="8" width="190" height="106"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsE-e3-s18">
-                                        <rect key="frame" x="0.0" y="0.0" width="210" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="190" height="60"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="aKA-Ly-HLv"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="UZL-Up-thJ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTg-76-cxh">
-                                        <rect key="frame" x="0.0" y="30" width="210" height="38"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTg-76-cxh">
+                                        <rect key="frame" x="0.0" y="60" width="190" height="30"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                                         <color key="textColor" red="1" green="0.91275440730000001" blue="0.59011015379999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHK-cD-2U9">
+                                        <rect key="frame" x="0.0" y="90" width="190" height="16"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
+                                        <color key="textColor" red="1" green="0.91372549020000005" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.093713317254576989" green="0.093713317254576989" blue="0.093713317254576989" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.05677286783854163" green="0.05677286783854163" blue="0.05677286783854163" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cso-gZ-E78" secondAttribute="trailing" constant="2" id="4Dr-6H-Cr9"/>
                             <constraint firstAttribute="bottom" secondItem="cso-gZ-E78" secondAttribute="bottom" constant="8" id="Cg5-2R-jda"/>
@@ -63,8 +69,8 @@
                 <color key="backgroundColor" name="red"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Vrh-xn-Xga" secondAttribute="trailing" constant="2" id="Dis-Q0-ENI"/>
-                    <constraint firstAttribute="bottom" secondItem="Vrh-xn-Xga" secondAttribute="bottom" constant="8" id="PEC-vW-vRb"/>
-                    <constraint firstItem="Vrh-xn-Xga" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="aiM-dE-eWy"/>
+                    <constraint firstAttribute="bottom" secondItem="Vrh-xn-Xga" secondAttribute="bottom" constant="4" id="PEC-vW-vRb"/>
+                    <constraint firstItem="Vrh-xn-Xga" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="aiM-dE-eWy"/>
                     <constraint firstItem="Vrh-xn-Xga" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="yyy-Yd-0nQ"/>
                 </constraints>
             </tableViewCellContentView>
@@ -74,8 +80,9 @@
                 <outlet property="genresLabel" destination="GTg-76-cxh" id="dtg-ob-8ek"/>
                 <outlet property="showiIconImageView" destination="Mca-Wq-yPi" id="6Lb-oz-UXV"/>
                 <outlet property="titleLabel" destination="SsE-e3-s18" id="k0M-54-WMP"/>
+                <outlet property="yearLabel" destination="MHK-cD-2U9" id="H7W-AH-Sqb"/>
             </connections>
-            <point key="canvasLocation" x="-130.43478260869566" y="147.99107142857142"/>
+            <point key="canvasLocation" x="-130.43478260869566" y="158.03571428571428"/>
         </tableViewCell>
     </objects>
     <resources>
